src/objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Asignacion_Directa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignación Directa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Disponible_24Hrs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disponible 24 horas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Guardias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profesional hace Guardias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Procesado_Festivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procesado Festivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Vehiculo_Pegatinas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehículo con pegatinas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_CAS_Vehiculo_Rotulado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehículo rotulado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_DAT_Fecha_Alta_Profesionales__c</fullName>
        <label>Fecha Alta Profesionales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSE_DAT_Fecha_BajaTemp_Venc__c</fullName>
        <label>Fecha de baja temporal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSE_DAT_Fecha_Baja__c</fullName>
        <label>Fecha de baja definitiva</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSE_DAT_Fecha_activacion__c</fullName>
        <label>Fecha confirmación alta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RSE_EMA_Email_Adicional__c</fullName>
        <label>Segunda dirección de correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSE_EMA_Email__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Activo_OT_en_curso__c</fullName>
        <formula>RSE_FOR_Lim_OT_EnCurso__c &gt;  RSE_NUM_Numero_Ordenes_Trabajo_En_Curso__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activo Servicio en curso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Activo_OT_mensual__c</fullName>
        <formula>RSE_NUM_Limite_mensual_con_sin_franq__c &gt;  RSE_NUM_NumOT_Mensual_Con_Sin_Franquicia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activo Servicio mensual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Categoria_del_profesional__c</fullName>
        <description>Campo para heredar la categoría del profesional desde el PR hasta los SR</description>
        <formula>CASE(RSE_LKP_Cuenta__r.CUE_SEL_Categoria_del_profesional__c, &quot;1&quot;, &quot;Franquiciado&quot;, &quot;0&quot;, &quot;Licenciatario&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoría del profesional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Lim_OT_EnCurso__c</fullName>
        <description>Límite de servicios en curso para este recurso de servicio</description>
        <formula>MCEILING(RSE_LKP_Profesional_Gremio__r.PRG_NUM_Lim_OT_en_Curso__c /RSE_LKP_Profesional_Gremio__r.PRG_NUM_Recursos_de_Servicio_Activos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Límite de Servicios en curso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Num_Asociado_Mizad__c</fullName>
        <formula>IF (  INCLUDES(RSE_SEL_Tipo_de_red__c, &apos;Mizad&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Asociado Mizad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Num_Asociado_Urgencias__c</fullName>
        <formula>IF (  INCLUDES(RSE_SEL_Tipo_de_red__c, &apos;Urgencias&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num Asociado Urgencias</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Prioridad_de_franquiciado__c</fullName>
        <formula>if(RSE_FOR_Categoria_del_profesional__c= &quot;1&quot;, 100, if(RSE_FOR_Categoria_del_profesional__c= &quot;0&quot;,100,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prioridad de franquiciado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Recurso_Servicio_Principal__c</fullName>
        <formula>RSE_LKP_Cuenta__r.CUE_LKP_Recurso_Servicio_Principal__c =  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurso de Servicio Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSE_FOR_Seniority__c</fullName>
        <formula>(NOW() - CreatedDate)/24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Seniority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_LKP_Cuenta__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Cuenta del Profesional Contrato</description>
        <label>Cuenta de Profesional</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recursos de servicios</relationshipLabel>
        <relationshipName>Recursos_de_servicios</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSE_LKP_Profesional_Gremio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación con el objeto Profesional_Gremio</description>
        <label>Profesional Gremio</label>
        <referenceTo>Profesional_Gremio__c</referenceTo>
        <relationshipLabel>Recursos de servicios</relationshipLabel>
        <relationshipName>Recursos_de_servicios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSE_NUM_Limite_mensual_con_sin_franq__c</fullName>
        <label>Límite mensual con/sin franquicia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_NUM_NumOT_Mensual_Con_Sin_Franquicia__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de órdenes de trabajo en curso por mes</description>
        <label>Número Serv Mensual Con/Sin Franquicia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_NUM_Numero_Ordenes_Trabajo_En_Curso__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Número de órdenes de trabajo total en curso de un profesional</description>
        <label>Número de Servicios en curso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSE_SEL_Gremio__c</fullName>
        <description>Gremio al que pertenece el profesional</description>
        <label>Gremio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Gremios</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_SEL_Motivo_Baja_Def__c</fullName>
        <label>Motivo de baja definitiva</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Motivos_Baja_Definitiva</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_SEL_Motivo_Baja_Temp__c</fullName>
        <label>Motivo de baja temporal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SELMotivos_Baja_Temporal_Profesional</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_SEL_Provincia__c</fullName>
        <label>Código de provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_SEL_Tipo_Documento__c</fullName>
        <label>Tipo de Documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_DocumentoId</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_SEL_Tipo_de_red__c</fullName>
        <description>Tipo de red. Ej. Mizad</description>
        <label>Tipo de Red</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GBL_SEL_Tipos_de_red</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSE_TEL_Telefono1__c</fullName>
        <label>Teléfono 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSE_TEL_Telefono2__c</fullName>
        <label>Teléfono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSE_TEL_Telefono3__c</fullName>
        <label>Teléfono 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Apellidos__c</fullName>
        <description>Apellidos del profesional</description>
        <label>Apellidos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Codigo_Recurso__c</fullName>
        <description>Campo externo y exclusivo para identificar cada uno de los recursos de un profesional.</description>
        <externalId>true</externalId>
        <label>Código de Recurso</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RSE_TXT_Codigo_postal__c</fullName>
        <label>Código postal</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Direccion__c</fullName>
        <label>Dirección</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Numero_Documento__c</fullName>
        <label>Nº de Documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Observaciones_BajaDef__c</fullName>
        <label>Observaciones baja definitiva</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Observaciones_BajaTemp__c</fullName>
        <label>Observaciones baja temporal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Poblacion__c</fullName>
        <label>Población</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Prof_Compania_Aseguradora__c</fullName>
        <description>Compañía Aseguradora del seguro de RC del Profesional.</description>
        <label>Compañía Aseguradora RC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Vehiculo_Color__c</fullName>
        <label>Color vehículo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Vehiculo_Marca__c</fullName>
        <label>Marca vehículo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSE_TXT_Vehiculo_Matricula__c</fullName>
        <label>Matrícula vehículo</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>RSE_CAS_Asignacion_Directa__c</columns>
        <columns>ResourceType</columns>
        <columns>RSE_TXT_Codigo_Recurso__c</columns>
        <columns>IsActive</columns>
        <columns>RSE_SEL_Tipo_Documento__c</columns>
        <columns>RSE_TXT_Numero_Documento__c</columns>
        <columns>RSE_LKP_Cuenta__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RelatedRecord</field>
            <operation>contains</operation>
            <value>santiago</value>
        </filters>
        <label>Mis recursos de servicios</label>
        <language>es</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cuenta_Asociada_Solo_PR_Contrato</fullName>
        <active>true</active>
        <description>El único tipo de Cuenta que se puede asociar en RSE_LKP_Cuenta__c es Profesional Contrato</description>
        <errorConditionFormula>RSE_LKP_Cuenta__r.RecordType.DeveloperName  &lt;&gt; &apos;CUE_Profesional&apos;</errorConditionFormula>
        <errorMessage>Únicamente se puede asociar el Recurso Asignado a una cuenta de tipo Profesional Contrato</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_no_modifica_SR</fullName>
        <active>true</active>
        <description>El perfil de FSL no puede modificar los campos del Recurso de servicio: nombre, tipo de recurso y código recurso.</description>
        <errorConditionFormula>AND( $Profile.Name = &quot;Field Service Mobile&quot;,OR( ISCHANGED( Name), ISCHANGED( ResourceType), ISCHANGED( RSE_TXT_Codigo_Recurso__c ) ))</errorConditionFormula>
        <errorMessage>No tiene permisos para modificar el valor del campo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Formato_Name</fullName>
        <active>true</active>
        <description>El formato del nombre debe ser el siguiente: (Identificador externo del profesional) + &apos;_&apos; + (Gremio) + &apos;_&apos; + (Secuencial)</description>
        <errorConditionFormula>NOT(REGEX(Name, RSE_LKP_Cuenta__r.CUE_TXT_Identificador__c +&quot;_&quot; + TEXT(RSE_SEL_Gremio__c)+&quot;_[0-9]{1,2}&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>El formato del nombre no es correcto. EJ: PR123456_01_1 REGEX: RSE_LKP_Cuenta__r.CUE_TXT_Identificador__c+&quot;_&quot;+RSE_SEL_Gremio+&quot;_[0-9]{1,2}&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Profesional_Gremio_Valido</fullName>
        <active>true</active>
        <description>El Profesional Gremio no es Válido o no existe.</description>
        <errorConditionFormula>IF(AND(OR(ISCHANGED(RSE_LKP_Profesional_Gremio__c),ISCHANGED(RSE_SEL_Gremio__c)), RSE_LKP_Profesional_Gremio__r.Name &lt;&gt; RSE_LKP_Cuenta__r.CUE_TXT_Identificador__c+ &apos;_&apos; + TEXT(RSE_SEL_Gremio__c)), true, false)</errorConditionFormula>
        <errorDisplayField>RSE_LKP_Profesional_Gremio__c</errorDisplayField>
        <errorMessage>El Profesional Gremio no es Válido o no existe.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Profesional_no_activo</fullName>
        <active>true</active>
        <description>Regla que salta cuando el Contrato padre del Recurso del Servicio no está activo y se intenta activar manualmente este último.</description>
        <errorConditionFormula>IsActive == true &amp;&amp; NOT(ISPICKVAL(RSE_LKP_Cuenta__r.CUE_SEL_Estado__c, &quot;02&quot;))</errorConditionFormula>
        <errorDisplayField>IsActive</errorDisplayField>
        <errorMessage>No es posible activar manualmente esta entidad ya que el Contrato principal del que depende no se encuentra en estado &quot;Activo&quot;.</errorMessage>
    </validationRules>
</CustomObject>